service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-v1
  namespace: shop
spec:
  selector:
    app: shop
    version: v1
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shop-v2
  namespace: shop
spec:
  selector:
    app: shop
    version: v2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
